Fixed menu opening on mobile

--- a/styles/core/_var.scss
+++ b/styles/core/_var.scss
@@ -17,6 +17,7 @@
                     overflow: hidden;
 
                     &-li {
+                        display: flex !important;
                         float: left;
                         border-bottom: none;
                     }
@@ -74,6 +75,7 @@
                     overflow: hidden;
 
                     &-li {
+                        display: flex !important;
                         float: left;
                         border-bottom: none;
                     }
@@ -132,6 +134,7 @@
                     overflow: hidden;
 
                     &-li {
+                        display: flex !important;
                         float: left;
                         border-bottom: none;
                     }
@@ -190,6 +193,7 @@
                     overflow: hidden;
 
                     &-li {
+                        display: flex !important;
                         float: left;
                         border-bottom: none;
                     }
