--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,7 @@ ol, ul {
   top: 0;
 }
 .header_nav-ul-li {
-  display: block;
+  display: none;
   float: none;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
@@ -163,6 +163,8 @@ p {
   font-family: 'adobe-garamond-pro,HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif';
   color: #2B2D42;
   font-weight: 400;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .content {
@@ -196,6 +198,8 @@ p {
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .sectiontwo {
@@ -229,7 +233,8 @@ p {
 .title {
   color: #EDF2F4;
   text-align: center;
-  margin-left: 10px;
+  margin-left: 5px;
+  padding-left: 0;
 }
 
 .article_title {
@@ -267,6 +272,8 @@ p {
 .bottomarticle-title {
   color: #EDF2F4;
   font-size: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .bottomarticle-text {
@@ -557,6 +564,7 @@ body {
     overflow: hidden;
   }
   .header_nav-ul-li {
+    display: flex !important;
     float: left;
     border-bottom: none;
   }
@@ -601,6 +609,7 @@ body {
     overflow: hidden;
   }
   .header_nav-ul-li {
+    display: flex !important;
     float: left;
     border-bottom: none;
   }
@@ -646,6 +655,7 @@ body {
     overflow: hidden;
   }
   .header_nav-ul-li {
+    display: flex !important;
     float: left;
     border-bottom: none;
   }
@@ -691,6 +701,7 @@ body {
     overflow: hidden;
   }
   .header_nav-ul-li {
+    display: flex !important;
     float: left;
     border-bottom: none;
   }
