--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -9,7 +9,7 @@
         top: 0;
 
         &-ul-li {
-            display: block;
+            display: none;
             float: none;
             border-bottom: 1px solid rgba(255, 255, 255, .3);
         }
