--- a/styles/sections/_main.scss
+++ b/styles/sections/_main.scss
@@ -11,6 +11,8 @@ p {
     font-family: 'adobe-garamond-pro,HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif';
     color: #2B2D42;
     font-weight: 400;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .content {
@@ -46,6 +48,8 @@ p {
             display: flex;
             flex-direction: column;
             text-align: center;
+            padding-left: 10px;
+            padding-right: 10px;
         }
     }
 }
@@ -82,7 +86,8 @@ p {
 .title {
     color: #EDF2F4;
     text-align: center;
-    margin-left: 10px;
+    margin-left: 5px;
+    padding-left: 0;
 }
 
 .article_title {
@@ -120,6 +125,8 @@ p {
 .bottomarticle-title {
     color: #EDF2F4;
     font-size: 25px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .bottomarticle-text {
